Fix open options overflow with long text

--- a/media/pollster/css/survey.css
+++ b/media/pollster/css/survey.css
@@ -5,7 +5,7 @@
 .survey-error-message { border: 1px solid #C00; -webkit-border-radius: 5px; padding: 10px 10px 16px 10px; background: #FBB; margin-bottom: 10px; font-size: 0.75em; font-weight: bold; }
 .question { border: 1px solid #CCC; -webkit-border-radius: 5px; padding: 10px 10px 16px 10px; background: #fff; margin-bottom: 10px; }
 .question ul.choices, .question ul.derived-values { list-style: none; margin-bottom: 10px;}
-.question li { margin-left: 20px; padding-bottom: 2px; }
+.question li { margin-left: 20px; padding-bottom: 2px; clear: both; }
 .question select.choices { margin-left: 20px; margin-bottom: 10px; max-width: 95%; }
 .question input[type=text] { margin: 0 0 10px 6px; padding: 0; }
 .question .choices input[type=text] { margin: 0 0 0 15px; }
